# ghmap-backend

./: Dockerfile  README.md  main.py  metrics-api.yaml  pyproject.toml
authentication/: create_github_secret.sh
authentication/k8s/: oauth.yaml
k8s/: deployment.yaml  metrics-api.yaml
